--- a/package.json
+++ b/package.json
@@ -4,8 +4,11 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "vite build",
-    "preview": "vite preview"
+    "build": "tsc && vite build",
+    "preview": "vite preview",
+    "test": "jest",
+    "test:watch": "jest --watch",
+    "test:coverage": "jest --coverage"
   },
   "keywords": [],
   "author": "",
@@ -15,7 +18,10 @@
     "three": "^0.162.0"
   },
   "devDependencies": {
+    "@types/jest": "^29.5.14",
     "@types/three": "^0.162.0",
+    "jest": "^29.7.0",
+    "ts-jest": "^29.3.1",
     "typescript": "^5.8.3",
     "vite": "^5.1.6"
   }
